Menu mobile e design responsivo

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Russo+One&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
   </head>
   <body>
     <header>
-      <div class="grad">
+      <div class="grad ">
         <div class="headerflex">
           <div class="container">
             <div class="topheader">
@@ -53,6 +54,9 @@
             </div>
             <div class="bottomheader">
               <div class="headeresquerda">
+                <div class="menuicon">
+                  <ion-icon class="menuiconion" name="menu-outline"></ion-icon>
+                </div>
                 <div class="glorioso">
                   <div class="escdiv">
                     <img
@@ -68,8 +72,12 @@
                   />
                 </div>
                 <div class="sites">
-                  <div class="tituloh u1">
-                    <a class="princi" href="#">Notícias</a>
+                  <div class="tituloh u1 ">
+                    <div class="flexopenmenu"<a class="princi" href="#">Notícias</a>
+                    <ion-icon
+                      class="titulochev"
+                      name="chevron-down-outline"
+                    ></ion-icon></div>
                     <div class="backdrop">
                       <div class="fundob">
                         <a class="subt" href="#">Masculino</a>
@@ -83,7 +91,11 @@
                     </div>
                   </div>
                   <div class="tituloh s7">
-                    <a class="princi" href="#">Futebol</a>
+                    <div class="flexopenmenu"<a class="princi" href="#">Futebol</a>
+                    <ion-icon
+                      class="titulochev"
+                      name="chevron-down-outline"
+                    ></ion-icon></div>
                     <div class="backdrop">
                       <div class="fundob">
                         <a class="subt" href="#">Masculino</a>
@@ -95,7 +107,11 @@
                     </div>
                   </div>
                   <div class="tituloh t3">
-                    <a class="princi" href="#">Clube</a>
+                   <div class="flexopenmenu" <a class="princi" href="#">Clube</a>
+                    <ion-icon
+                      class="titulochev"
+                      name="chevron-down-outline"
+                    ></ion-icon></div>
                     <div class="backdrop">
                       <div class="fundob">
                         <a class="subt" href="#">História</a>
@@ -106,7 +122,7 @@
                         <a class="subt" href="#">Ídolos</a>
                       </div>
                       <div class="fundob">
-                        <a class="subt pr" href="#">Outros Esportes</a>
+                        <div class="subt pr" href="#">Outros Esportes</div>
                         <a class="subt" href="#">Remo</a>
                         <a class="subt" href="#">Basquete</a>
                         <a class="subt" href="#">Futsal</a>
@@ -114,8 +130,8 @@
                         <a class="subt" href="#">Esportes de Praia</a>
                       </div>
                       <div class="fundob">
-                        <a class="subt pr" href="#"
-                          >Transparências e Negócios</a
+                        <div class="subt pr" href="#"
+                          >Transparências e Negócios</div
                         >
                         <a class="subt" href="#">Executivo</a>
                         <a class="subt" href="#">Sustentabilidade</a>
@@ -127,7 +143,11 @@
                   </div>
 
                   <div class="tituloh d2">
-                    <a class="princi" href="#">Ingressos</a>
+                    <div class="flexopenmenu"<a class="princi" href="#">Ingressos</a>
+                    <ion-icon
+                      class="titulochev"
+                      name="chevron-down-outline"
+                    ></ion-icon></div>
                     <div class="backdrop">
                       <div class="fundob">
                         <a class="subt" href="#">Temporada 2023</a>
@@ -139,7 +159,11 @@
                     </div>
                   </div>
                   <div class="tituloh c5">
-                    <a class="princi" href="#">Loja</a>
+                    <div class="flexopenmenu"<a class="princi" href="#">Loja</a>
+                    <ion-icon
+                      class="titulochev"
+                      name="chevron-down-outline"
+                    ></ion-icon></div>
                     <div class="backdrop">
                       <div class="fundob">
                         <a class="subt" href="#">Loja Online</a>
@@ -150,7 +174,11 @@
                     </div>
                   </div>
                   <div class="tituloh s6">
-                    <a class="princi" href="#">Sócio</a>
+                    <div class="flexopenmenu"<a class="princi" href="#">Sócio</a>
+                    <ion-icon
+                      class="titulochev"
+                      name="chevron-down-outline"
+                    ></ion-icon></div>
                     <div class="backdrop">
                       <div class="fundob">
                         <a class="subt" href="#">Seja Sócio</a>
@@ -185,6 +213,7 @@
             </div>
           </div>
         </div>
+        <div class="fundomenu"></div>
         <div class="searchbar">
           <div class="searchwidth">
             <input
@@ -195,6 +224,7 @@
         </div>
       </div>
     </header>
+    <section class="menuhid"></section>
     <section class="destaques">
       <div class="posthid">
         <div class="posts" style="transform: translateX(calc(0%))">
@@ -832,22 +862,22 @@
                         <img src="img/tabela/botafogo.png" />Botafogo
                       </div>
                     </td>
-                    <td>51</td>
-                    <td>23</td>
-                    <td>16</td>
+                    <td>52</td>
                     <td>25</td>
+                    <td>16</td>
+                    <td>24</td>
                   </tr>
                   <tr>
                     <td>2</td>
                     <td>
                       <div class="timestab">
-                        <img src="img/tabela/pal.png" />Palmeiras
+                        <img src="img/tabela/bra.png" />Bragantino
                       </div>
                     </td>
-                    <td>44</td>
-                    <td>24</td>
+                    <td>45</td>
+                    <td>25</td>
                     <td>12</td>
-                    <td>20</td>
+                    <td>13</td>
                   </tr>
                   <tr>
                     <td>3</td>
@@ -856,22 +886,23 @@
                         <img src="img/tabela/gre.png" />Grêmio
                       </div>
                     </td>
-                    <td>43</td>
-                    <td>24</td>
+                    <td>44</td>
+                    <td>25</td>
                     <td>13</td>
                     <td>8</td>
                   </tr>
+                  
                   <tr>
                     <td>4</td>
                     <td>
                       <div class="timestab">
-                        <img src="img/tabela/bra.png" />Bragantino
+                        <img src="img/tabela/pal.png" />Palmeiras
                       </div>
                     </td>
-                    <td>42</td>
-                    <td>24</td>
-                    <td>11</td>
+                    <td>44</td>
+                    <td>25</td>
                     <td>12</td>
+                    <td>19</td>
                   </tr>
                 </tbody>
               </table>
@@ -1054,12 +1085,12 @@
     <footer>
       <div class="tudofot">
         <div class="fothead">
-          <div class="teste">#OMAISTRADICIONAL</div>
+          <div class="omais">#OMAISTRADICIONAL</div>
 
           <div class="escudofot">
             <img src="img/footer.png" />
           </div>
-          <div class="teste">#OMAISTRADICIONAL</div>
+          <div class="omais">#OMAISTRADICIONAL</div>
         </div>
         <div class="map">
           <div class="mapcent">
