--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Russo+One&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/font.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/responsive.css" />
   </head>
   <body>
     <header>
-      <div class="grad ">
+      <div class="grad">
         <div class="headerflex">
           <div class="container">
             <div class="topheader">
@@ -72,12 +73,14 @@
                   />
                 </div>
                 <div class="sites">
-                  <div class="tituloh u1 ">
-                    <div class="flexopenmenu"<a class="princi" href="#">Notícias</a>
-                    <ion-icon
-                      class="titulochev"
-                      name="chevron-down-outline"
-                    ></ion-icon></div>
+                  <div class="tituloh u1">
+                    <div class="flexopenmenu">
+                      <a class="princi" href="#">Notícias</a>
+                      <ion-icon
+                        class="titulochev"
+                        name="chevron-down-outline"
+                      ></ion-icon>
+                    </div>
                     <div class="backdrop">
                       <div class="fundob">
                         <a class="subt" href="#">Masculino</a>
@@ -91,11 +94,13 @@
                     </div>
                   </div>
                   <div class="tituloh s7">
-                    <div class="flexopenmenu"<a class="princi" href="#">Futebol</a>
-                    <ion-icon
-                      class="titulochev"
-                      name="chevron-down-outline"
-                    ></ion-icon></div>
+                    <div class="flexopenmenu">
+                      <a class="princi" href="#">Futebol</a>
+                      <ion-icon
+                        class="titulochev"
+                        name="chevron-down-outline"
+                      ></ion-icon>
+                    </div>
                     <div class="backdrop">
                       <div class="fundob">
                         <a class="subt" href="#">Masculino</a>
@@ -107,11 +112,13 @@
                     </div>
                   </div>
                   <div class="tituloh t3">
-                   <div class="flexopenmenu" <a class="princi" href="#">Clube</a>
-                    <ion-icon
-                      class="titulochev"
-                      name="chevron-down-outline"
-                    ></ion-icon></div>
+                    <div class="flexopenmenu">
+                      <a class="princi" href="#">Clube</a>
+                      <ion-icon
+                        class="titulochev"
+                        name="chevron-down-outline"
+                      ></ion-icon>
+                    </div>
                     <div class="backdrop">
                       <div class="fundob">
                         <a class="subt" href="#">História</a>
@@ -130,9 +137,9 @@
                         <a class="subt" href="#">Esportes de Praia</a>
                       </div>
                       <div class="fundob">
-                        <div class="subt pr" href="#"
-                          >Transparências e Negócios</div
-                        >
+                        <div class="subt pr" href="#">
+                          Transparências e Negócios
+                        </div>
                         <a class="subt" href="#">Executivo</a>
                         <a class="subt" href="#">Sustentabilidade</a>
                         <a class="subt" href="#">Trabalhe Conosco</a>
@@ -143,11 +150,13 @@
                   </div>
 
                   <div class="tituloh d2">
-                    <div class="flexopenmenu"<a class="princi" href="#">Ingressos</a>
-                    <ion-icon
-                      class="titulochev"
-                      name="chevron-down-outline"
-                    ></ion-icon></div>
+                    <div class="flexopenmenu">
+                      <a class="princi" href="#">Ingressos</a>
+                      <ion-icon
+                        class="titulochev"
+                        name="chevron-down-outline"
+                      ></ion-icon>
+                    </div>
                     <div class="backdrop">
                       <div class="fundob">
                         <a class="subt" href="#">Temporada 2023</a>
@@ -159,11 +168,13 @@
                     </div>
                   </div>
                   <div class="tituloh c5">
-                    <div class="flexopenmenu"<a class="princi" href="#">Loja</a>
-                    <ion-icon
-                      class="titulochev"
-                      name="chevron-down-outline"
-                    ></ion-icon></div>
+                    <div class="flexopenmenu">
+                      <a class="princi" href="#">Loja</a>
+                      <ion-icon
+                        class="titulochev"
+                        name="chevron-down-outline"
+                      ></ion-icon>
+                    </div>
                     <div class="backdrop">
                       <div class="fundob">
                         <a class="subt" href="#">Loja Online</a>
@@ -174,11 +185,13 @@
                     </div>
                   </div>
                   <div class="tituloh s6">
-                    <div class="flexopenmenu"<a class="princi" href="#">Sócio</a>
-                    <ion-icon
-                      class="titulochev"
-                      name="chevron-down-outline"
-                    ></ion-icon></div>
+                    <div class="flexopenmenu">
+                      <a class="princi" href="#">Sócio</a>
+                      <ion-icon
+                        class="titulochev"
+                        name="chevron-down-outline"
+                      ></ion-icon>
+                    </div>
                     <div class="backdrop">
                       <div class="fundob">
                         <a class="subt" href="#">Seja Sócio</a>
@@ -199,7 +212,7 @@
                       class="iconeentrar"
                       name="person-outline"
                     ></ion-icon>
-                    Entrar
+                    <p class="btnap">Entrar</p>
                   </a>
                 </div>
                 <div class="caixasd">
@@ -891,7 +904,7 @@
                     <td>13</td>
                     <td>8</td>
                   </tr>
-                  
+
                   <tr>
                     <td>4</td>
                     <td>
@@ -918,17 +931,17 @@
       <div class="lojatitulo">
         <h2>Loja Online</h2>
       </div>
-      <div class="lojajs">
+      <div class="lojajs tsvw">
         <div class="loja">
-          <div class="flexloja">
+          <div class="flexloja esq">
             <div class="imgloja"></div>
             <div class="btncompre">Comprar</div>
           </div>
-          <div class="flexloja">
+          <div class="flexloja cen">
             <div class="imgloja"></div>
             <div class="btncompre">Comprar</div>
           </div>
-          <div class="flexloja">
+          <div class="flexloja dir">
             <div class="imgloja"></div>
             <div class="btncompre">Comprar</div>
           </div>
@@ -1025,6 +1038,7 @@
                     src="img/patrocinio/parceiros/MM carros.png"
                 /></a>
               </div>
+
               <div class="patroimgbox parc">
                 <a href="https://youdynamiceurope.com/"
                   ><img
@@ -1037,6 +1051,7 @@
                   ><img class="patroimg" src="img/patrocinio/parceiros/tnt.png"
                 /></a>
               </div>
+
               <div class="patroimgbox parc">
                 <a href="https://elastic.fit/"
                   ><img
