99% do design responsivo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Russo+One&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/font.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/responsive.css" />
   </head>
@@ -129,7 +128,7 @@
                         <a class="subt" href="#">Ídolos</a>
                       </div>
                       <div class="fundob">
-                        <div class="subt pr" href="#">Outros Esportes</div>
+                        <div class="subt pr">Outros Esportes</div>
                         <a class="subt" href="#">Remo</a>
                         <a class="subt" href="#">Basquete</a>
                         <a class="subt" href="#">Futsal</a>
@@ -137,9 +136,7 @@
                         <a class="subt" href="#">Esportes de Praia</a>
                       </div>
                       <div class="fundob">
-                        <div class="subt pr" href="#">
-                          Transparências e Negócios
-                        </div>
+                        <div class="subt pr">Transparências e Negócios</div>
                         <a class="subt" href="#">Executivo</a>
                         <a class="subt" href="#">Sustentabilidade</a>
                         <a class="subt" href="#">Trabalhe Conosco</a>
@@ -243,15 +240,15 @@
         <div class="posts" style="transform: translateX(calc(0%))">
           <div
             class="postimg"
-            style="background-image: url(img/noticias/11.jpeg)"
+            style="background-image: url(img/noticias/1\ da\ 1.jpg)"
           >
             <div class="postgrad">
               <div class="tituloebtn">
                 <div class="titulo">
-                  <h1>Nota oficial</h1>
+                  <h1>BOTAFOGO 2 - 0 FLUMINENSE</h1>
                   <p>
-                    Bruno Lage não é mais o técnico do Botafogo; Confira o
-                    posicionamento institucional desta terça-feira (3)
+                    Com direito a dois golaços, Botafogo vence o Fluminense e
+                    abre 9 pontos de vantagem na liderança do brasileirão
                   </p>
                 </div>
 
@@ -261,36 +258,15 @@
           </div>
           <div
             class="postimg"
-            style="background-image: url(img/noticias/1.jpg)"
+            style="background-image: url(img/noticias/2\ da\ 2.png)"
           >
             <div class="postgrad">
               <div class="tituloebtn">
                 <div class="titulo">
-                  <h4>MASCULINO</h4>
-
-                  <h1>BOTAFOGO 1 - 1 GOIÁS</h1>
-                  <p>Alvinegro empata no Nilton Santos</p>
-                </div>
-
-                <div class="btnmateria">LEIA AGORA</div>
-              </div>
-            </div>
-          </div>
-          <div
-            class="postimg"
-            style="background-image: url(img/noticias/32.png)"
-          >
-            <div class="postgrad">
-              <div class="tituloebtn">
-                <div class="titulo">
-                  <h4>FEMININO</h4>
-                  <h1>
-                    duque de caxias 0 <br />
-                    botafogo 7
-                  </h1>
+                  <h1>BOTAFOGO 3 - 1 PÉROLAS NEGRAS</h1>
                   <p>
-                    Jogando fora de casa, Botafogo Vence o Duque de Caxias na 2ª
-                    Rodada do Carioca
+                    Botafogo vence o Pérolas Negras, pela 3ª rodada do
+                    Campeonato Carioca e mantém invencibilidade no torneio
                   </p>
                 </div>
                 <div class="btnmateria">LEIA AGORA</div>
@@ -317,15 +293,29 @@
 
           <div
             class="postimg"
-            style="background-image: url(img/noticias/3.jpeg)"
+            style="background-image: url(img/noticias/4\ da\ 4.jpg)"
           >
             <div class="postgrad">
               <div class="tituloebtn">
                 <div class="titulo">
-                  <h1>super dia das crianças</h1>
+                  <h1>CLUBE SOCIAL E OLÍMPICO</h1>
+                  <p>Basquete do Botafogo está de volta ao NBB</p>
+                </div>
+                <div class="btnmateria">LEIA AGORA</div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="postimg"
+            style="background-image: url(img/noticias/5\ da\ 5.png)"
+          >
+            <div class="postgrad">
+              <div class="tituloebtn">
+                <div class="titulo">
+                  <h1>CRIA GLORIOSA NA SELEÇÃO</h1>
                   <p>
-                    Evento acontece em General Severiano no dia 12 de outubro,
-                    de 9h às 17:30, na sede social do Botafogo
+                    Ana Guimarães é convocada para integrar a Seleção Brasileira
+                    Sub-20
                   </p>
                 </div>
                 <div class="btnmateria">LEIA AGORA</div>
@@ -342,9 +332,8 @@
                   <h1>Trabalho Reconhecido</h1>
                   <p>
                     Botafogo tem dupla de profissionais convocados para as
-                    seleções de base; Médico Dr. Gustavo Dutra foi chamado para
-                    a seleção panamericana e preparador de goleiros Ricardo
-                    Herrera representará o alvinegro na Sub-17
+                    seleções de base; Médico Dr. Gustavo Dutra e preparador de
+                    goleiros Ricardo Herrera
                   </p>
                 </div>
                 <div class="btnmateria">LEIA AGORA</div>
@@ -436,7 +425,7 @@
                   </div>
                 </div>
               </div>
-              <div class="partida">
+              <div class="partida past">
                 <p class="campeonato">Série A</p>
                 <p class="rodada">Rodada 26 de 38</p>
                 <p class="datapartida">
@@ -451,7 +440,7 @@
                     <p>Fluminense</p>
                   </div>
                   <div class="vsebotao">
-                    <div class="vs">VS</div>
+                    <div class="vs">0 - 2</div>
                     <div class="btnpartidas esgotados">
                       INGRESSOS<br />
                       ESGOTADOS
@@ -875,10 +864,10 @@
                         <img src="img/tabela/botafogo.png" />Botafogo
                       </div>
                     </td>
-                    <td>52</td>
-                    <td>25</td>
-                    <td>16</td>
-                    <td>24</td>
+                    <td>55</td>
+                    <td>26</td>
+                    <td>17</td>
+                    <td>26</td>
                   </tr>
                   <tr>
                     <td>2</td>
@@ -887,8 +876,8 @@
                         <img src="img/tabela/bra.png" />Bragantino
                       </div>
                     </td>
-                    <td>45</td>
-                    <td>25</td>
+                    <td>46</td>
+                    <td>26</td>
                     <td>12</td>
                     <td>13</td>
                   </tr>
@@ -900,9 +889,9 @@
                       </div>
                     </td>
                     <td>44</td>
-                    <td>25</td>
+                    <td>26</td>
                     <td>13</td>
-                    <td>8</td>
+                    <td>7</td>
                   </tr>
 
                   <tr>
@@ -913,9 +902,9 @@
                       </div>
                     </td>
                     <td>44</td>
-                    <td>25</td>
+                    <td>26</td>
                     <td>12</td>
-                    <td>19</td>
+                    <td>18</td>
                   </tr>
                 </tbody>
               </table>
