- carrossel touch nas notícias e partidas - bugs relacionados ao header, loja e scroll do menu mobile

--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
             <input
               id="search"
               placeholder="Pesquisar Videos, Notícias e Fotos"
+              readonly
             />
           </div>
         </div>
@@ -924,15 +925,23 @@
         <div class="loja">
           <div class="flexloja esq">
             <div class="imgloja"></div>
-            <div class="btncompre">Comprar</div>
+            <a
+              href="https://store.botafogo.com.br/linha-oficial/treino-e-viagem"
+            >
+              <div class="btncompre">Comprar</div></a
+            >
           </div>
           <div class="flexloja cen">
             <div class="imgloja"></div>
-            <div class="btncompre">Comprar</div>
+            <a href="https://store.botafogo.com.br/linha-oficial/uniforme-i">
+              <div class="btncompre">Comprar</div></a
+            >
           </div>
           <div class="flexloja dir">
             <div class="imgloja"></div>
-            <div class="btncompre">Comprar</div>
+            <a href="https://store.botafogo.com.br/prematch?_q=prematch&ma">
+              <div class="btncompre">Comprar</div></a
+            >
           </div>
         </div>
       </div>
