- touch carrossel e partidas - bugs header, altura menu mobile scroll, escudos de partidas, classificação, loja online transições, footer espaçamento grid

--- a/index.html
+++ b/index.html
@@ -927,19 +927,26 @@
             <div class="imgloja"></div>
             <a
               href="https://store.botafogo.com.br/linha-oficial/treino-e-viagem"
+              target="_blank"
             >
               <div class="btncompre">Comprar</div></a
             >
           </div>
           <div class="flexloja cen">
             <div class="imgloja"></div>
-            <a href="https://store.botafogo.com.br/linha-oficial/uniforme-i">
+            <a
+              href="https://store.botafogo.com.br/linha-oficial/uniforme-i"
+              target="_blank"
+            >
               <div class="btncompre">Comprar</div></a
             >
           </div>
           <div class="flexloja dir">
             <div class="imgloja"></div>
-            <a href="https://store.botafogo.com.br/prematch?_q=prematch&ma">
+            <a
+              href="https://store.botafogo.com.br/prematch?_q=prematch&ma"
+              target="_blank"
+            >
               <div class="btncompre">Comprar</div></a
             >
           </div>
