No border around the crest and darker header background

--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
                       alt="Escudo do Botafogo"
                     />
                   </div>
-                  <img
+                  <!-- <img
                     class="borda"
                     src="img/botafogoborda.png"
                     alt="Escudo do Botafogo"
-                  />
+                  /> -->
                 </div>
                 <div class="sites">
                   <div class="tituloh u1">
